--- a/blogapp/templates/blogapp/post_list.html
+++ b/blogapp/templates/blogapp/post_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Himanshu</title>
     </head>
     <body>
         <header>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Himanshu Blog</a></h1>
         </header>
 
         <article>
