--- a/blogapp/static/css/blog.css
+++ b/blogapp/static/css/blog.css
@@ -1,10 +1,13 @@
 body {
     padding-left: 15px;
 }
-h1 a, h2 a {
+
+h1 a,
+h2 a {
     color: #C25100;
     font-family: 'Lobster';
 }
+
 .page-header {
     background-color: #C25100;
     margin-top: 0;
@@ -59,8 +62,8 @@ h4 {
     color: #000000;
 }
 
-.post > .date,
-.post > .actions {
+.post>.date,
+.post>.actions {
     float: right;
 }
 
