--- a/blogapp/templates/blogapp/base.html
+++ b/blogapp/templates/blogapp/base.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
 
-        <title>Himanshu</title>
+        <title>Blog Application</title>
     </head>
     <body>
         <header class="page-header">
           <div class="container">
-              <h1><a href="/">Django Girls Blog</a></h1>
+              <h1><a href="/">Django Boys Blog</a></h1>
           </div>
         </header>
         <main class="container">
